# llama-index-orpo-dataset-generator

./: README.md  pyproject.toml
src/llama-index-orpo-dataset-generator/: labelled_orpo_dataset.py  orpo_dpo_dataset_generator.py
src/llama_index_orpo_dpo_dataset_generator/: labelled_orpo_dataset.py  orpo_data_example.py  orpo_dpo_dataset_generator.py
