[tool.hatch.build.targets.wheel]
packages = ["src/llama_index_orpo_dpo_dataset_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama_index_orpo_dpo_dataset_generator"
version = "0.0.1"
authors = [
  { name="Example Author", email="michael@mikesvendsen.net" },
]
description = "A dataset generator for llama index to aid in generating ORPO & DPO datasets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thesven/llama-index-orpo-dataset-generator"
Issues = "https://github.com/thesven/llama-index-orpo-dataset-generator/issues"